--- a/block-BHaabk/index.html
+++ b/block-BHaabk/index.html
@@ -1,3 +1,55 @@
+<!DOCTYPE HTML>
+<html lang="en">
+    <head>
+        <link rel="stylesheet" href="assets/stylesheets/style.css">
+    </head>
+    <body>
+        <header class="head">
+            <img src="assets/media/altcampus-logo.jpg" alt="logo">
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">Content</a>
+                <a href="#">Press</a>
+                <a href="#">Contact us</a>
+            </nav>
+        </header>
+        <main>
+            <h1> Random Work </h1>
+            <section class="section">
+                <article class="one">
+                    <h2>This is lorem ipsum</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                </article>
+                <article class="two"> 
+                    <img src="assets/media/pexels-juliano-ferreira-9545149.jpg" alt="a hill">
+                </article>
+            </section>
+            <section class="section2">
+                <article>
+                    <img src="assets/media/pexels-oyster-haus-11354823.jpg" alt="pc1" class="img">
+                    <img src="assets/media/pexels-vyacheslav-bobin-9906385.jpg" alt="pic2" class="img">
+                    <img src="assets/media/pexels-yaroslava-borz-11142034.jpg" alt="picture 3" class="img">
+                    <img src="assets/media/pexels-yunus-tu-8120844.jpg" alt=" the picture 4" class="img">
+                    <img src="assets/media/pexels-zsfia-fehr-10900689.jpg" alt="the picture 5" class="img">
+                    <img src="assets/media/pexels-juliano-ferreira-9545149.jpg" alt="the picture 6" class="img">
+                </article>
+            </section>
+        </main>
+        <footer class="head i"> 
+            <small> &copy; All Rights Reserved.</small>
+            <nav>
+                <a href="#">Facebook</a>
+                <a href="#">Instagram</a>
+                <a href="#">Twitter</a>
+            </nav>
+        </footer>
+    </body>
+</html>
+
+
+
+
 <!-- 
 1. Create a simple page having a header, main content, and a footer.
 
