--- a/block-BHaabo/index.html
+++ b/block-BHaabo/index.html
@@ -1,3 +1,72 @@
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <title>Assignment 2</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="assets/stylesheets/style.css">
+        <script src="https://kit.fontawesome.com/fb019b9d31.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <header class="header">
+            <img src="assets/media/altcampus-logo.jpg" alt="logo" class="img-1">
+            <nav>
+                 <img src="assets/icons/bell.svg" alt="a bell icon" class="img-2">
+                <a href="#">Contact</a>
+                <img src="assets/icons/user.svg" alt="user" class="img-2">
+            </nav>
+        </header>
+        <main>
+            <section class="container">
+                <div class="col-1">
+                    <ul>
+                        <li class="li">
+                            <img src="assets/icons/dashboard.svg">
+                            <p class="pa pi">Dashboard</p>
+                        </li>
+                        <li class="li">
+                            <img src="assets/icons/article.svg">
+                            <p class="pa po">Articles</p>
+                        </li>
+                        <li class="li">
+                            <img src="assets/icons/analytics.svg">
+                            <p class="pa">Analytics</p>
+                        </li>
+                        <li class="li">
+                            <img src="assets/icons/inbox.svg">
+                            <p class="pa">Inbox</p>
+                        </li>
+                        <li class="li">
+                            <img src="assets/icons/setting.svg">
+                            <p class="pa">Settings</p>
+                        </li>
+                    </ul>
+                    <button class="li il">
+                        <img src="assets/icons/log-out.svg" alt="log out icon">
+                        <p class="pa">Log out</p> 
+                    </button>
+                </div>
+                <article class="col-2">
+                    <img class="img" src="assets/icons/01.png" alt="quote">
+                    <h2>Why we are doing AltCampus?</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    </p><br>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+                    <button class="butt">Read More</button>
+                </article>
+            </section>
+        </main>
+        <footer class="footer">
+            <small>&copy;AltCampus</small>
+            <nav>
+                <i class="fa-brands fa-facebook per"></i>
+                <i class="fa-brands fa-twitter per"></i>
+            </nav>
+        </footer>
+    </body>
+</html>
+
+
 <!-- 
 - Create a page using flexbox according to the layout shown below.
 
